# merkle-subscription

./: README.md
backend/: .env  .gitignore  Cargo.toml
backend/migrations/: 20240101000000_init_schema.sql
backend/src/: main.rs  model.rs
backend/src/merkle/: generator.rs  mod.rs  solana_client.rs  tree.rs  updatestate.rs
merkle-program/: Anchor.toml
merkle-program/programs/merkle-program/: Cargo.toml
merkle-program/programs/merkle-program/src/: error.rs  lib.rs  state.rs
merkle-program/programs/merkle-program/src/instructions/: initialize.rs  mod.rs  update_root.rs  verify.rs
merkle-program/tests/: merkle-program.ts
