[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4"
rs_merkle = "1.5.0"
serde = "1.0.228"
sha2 = "0.10.9"
solana-sdk = "3.0.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
] }
sqlx-cli = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
